--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.6.0",
     "axios": "^1.7.7",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
