--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.6.0",
+    "aws-amplify": "^6.8.0",
     "axios": "^1.7.7",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
