--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@aws-amplify/auth": "^6.6.0",
     "aws-amplify": "^6.8.0",
     "axios": "^1.7.7",
-    "lucide-react": "^0.447.0",
+    "lucide-react": "^0.454.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
