CHORE: 프로젝트 의존성 업데이트 - 게시글 작성 에디터를 위해 `@tinymce/tinymce-react`와 `@toast-ui/react-editor`를 추가했습니다. - 드로잉 기능을 위해 `@excalidraw/excalidraw`를 추가했습니다. - 코드 스니펫 이미지 생성을 위해 `highlight.js`를 추가했습니다. - 이미지 업로드 기능을 위해 `@aws-sdk/client-s3`와 `uuid`를 추가했습니다. - React와 React DOM의 버전을 17.0.2로 업데이트했습니다.

--- a/package.json
+++ b/package.json
@@ -12,22 +12,28 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.7.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.693.0",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@excalidraw/excalidraw": "0.17.6",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@tinymce/tinymce-react": "4.3.2",
+    "@toast-ui/react-editor": "3.2.3",
     "aws-amplify": "^6.9.0",
     "axios": "^1.7.7",
+    "highlight.js": "11.11.0",
     "lucide-react": "^0.454.0",
     "quill-image-resize-module-react": "^3.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "17.0.74",
+    "@types/react-dom": "17.0.25",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
