--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.37.0",
     "vite": "^5.4.1"
   }
 }
